[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Extra.gd" type="Script" id=1]
[ext_resource path="res://fonts/harmony-os-sans-sc/ExtraNameSubtitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://images/icons/left.png" type="Texture" id=3]
[ext_resource path="res://fonts/harmony-os-sans-sc/H1TitleBolder.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/harmony-os-sans-sc/ExtraNameTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/harmony-os-sans-sc/ListChild.tres" type="DynamicFont" id=7]
[ext_resource path="res://fonts/harmony-os-sans-sc/ExtraText.tres" type="DynamicFont" id=8]
[ext_resource path="res://images/transparent-grids.png" type="Texture" id=9]
[ext_resource path="res://images/icons/sprite-round.png" type="Texture" id=10]
[ext_resource path="res://fonts/harmony-os-sans-sc/ExtraTextBold.tres" type="DynamicFont" id=11]
[ext_resource path="res://themes/Mod.tres" type="Theme" id=12]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Extra" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.196078 )
margin_right = 1920.0
margin_bottom = 1080.0

[node name="TitleContainer" type="Control" parent="."]
visible = false
margin_top = 75.0
margin_right = 104.0
margin_bottom = 179.0
rect_min_size = Vector2( 104, 104 )

[node name="BackButtonTween" type="Tween" parent="TitleContainer"]
repeat = true
playback/repeat = true

[node name="BG" type="ColorRect" parent="TitleContainer"]
margin_right = 556.0
margin_bottom = 104.0
color = Color( 0, 0, 0, 1 )

[node name="Right" type="ColorRect" parent="TitleContainer"]
margin_left = 576.0
margin_right = 608.0
margin_bottom = 104.0
color = Color( 0, 0, 0, 1 )

[node name="BackButton" type="TextureButton" parent="TitleContainer"]
margin_right = 104.0
margin_bottom = 104.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )

[node name="Title" type="Label" parent="TitleContainer"]
margin_left = 102.0
margin_right = 462.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 4 )
text = "TR:EXTRA:TITLE"
valign = 1

[node name="MenuContainer" type="Control" parent="."]
margin_left = 90.0
margin_top = 210.0
margin_right = 630.0
margin_bottom = 990.0

[node name="ColorRect" type="ColorRect" parent="MenuContainer"]
modulate = Color( 1, 1, 1, 0.4 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Tree" type="Tree" parent="MenuContainer"]
margin_top = 16.0
margin_right = 540.0
margin_bottom = 748.0
theme = ExtResource( 12 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/item_margin = 30
custom_constants/vseparation = 8
custom_constants/draw_guides = 0
custom_constants/hseparation = 30
custom_fonts/font = ExtResource( 7 )
custom_styles/selected_focus = SubResource( 2 )
custom_styles/bg = SubResource( 1 )
hide_folding = true
hide_root = true

[node name="BothControl" type="Control" parent="."]
margin_left = 690.0
margin_top = 210.0
margin_right = 1830.0
margin_bottom = 990.0

[node name="Tween" type="Tween" parent="BothControl"]

[node name="BG" type="ColorRect" parent="BothControl"]
modulate = Color( 1, 1, 1, 0.8 )
margin_right = 990.0
margin_bottom = 780.0

[node name="NameTitle" type="Label" parent="BothControl"]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 5 )
percent_visible = 0.0

[node name="NameSubtitle" type="Label" parent="BothControl"]
margin_left = 30.0
margin_top = 83.0
margin_right = 258.0
margin_bottom = 119.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 0
custom_fonts/font = ExtResource( 2 )
percent_visible = 0.0

[node name="TextContainer" type="VBoxContainer" parent="BothControl"]
margin_left = 30.0
margin_top = 140.0
margin_right = 600.0
margin_bottom = 300.0
custom_constants/separation = 10

[node name="Description" type="RichTextLabel" parent="BothControl/TextContainer"]
margin_right = 570.0
margin_bottom = 570.0
rect_min_size = Vector2( 0, 570 )
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/line_separation = 9
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0

[node name="ExtraTempl" type="RichTextLabel" parent="BothControl/TextContainer"]
visible = false
margin_top = 50.0
margin_right = 570.0
margin_bottom = 90.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/line_separation = 9
custom_fonts/normal_font = ExtResource( 8 )
visible_characters = 0
percent_visible = 0.0
meta_underlined = false
fit_content_height = true
scroll_active = false

[node name="SpriteControl" type="Control" parent="BothControl"]
margin_left = 630.0
margin_top = 210.0
margin_right = 1140.0
margin_bottom = 720.0

[node name="BG" type="TextureRect" parent="BothControl/SpriteControl"]
margin_left = 15.0
margin_top = 15.0
margin_right = 495.0
margin_bottom = 495.0
rect_pivot_offset = Vector2( 240, 240 )
texture = ExtResource( 9 )

[node name="Sprite" type="TextureRect" parent="BothControl/SpriteControl"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 30.0
margin_right = -15.0
margin_bottom = -15.0
expand = true
stretch_mode = 6

[node name="Rounds" type="Control" parent="BothControl/SpriteControl"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 255, 255 )

[node name="LeftTop" type="TextureRect" parent="BothControl/SpriteControl/Rounds"]
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 10 )

[node name="RightBottom" type="TextureRect" parent="BothControl/SpriteControl/Rounds"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 120.0
margin_bottom = 120.0
rect_rotation = 180.0
texture = ExtResource( 10 )

[node name="PictureControl" type="Control" parent="."]
visible = false
margin_left = 690.0
margin_top = 210.0
margin_right = 1830.0
margin_bottom = 990.0

[node name="Tween" type="Tween" parent="PictureControl"]

[node name="BG" type="ColorRect" parent="PictureControl"]
modulate = Color( 1, 1, 1, 0.8 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Picture" type="TextureRect" parent="PictureControl"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -139.0
expand = true
stretch_mode = 6

[node name="Title" type="Label" parent="PictureControl"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -114.0
margin_bottom = -66.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="Artist" type="Label" parent="PictureControl"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.0
margin_bottom = -18.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1

[node name="ArticleControl" type="Control" parent="."]
visible = false
margin_left = 690.0
margin_top = 210.0
margin_right = 1830.0
margin_bottom = 990.0

[node name="Tween" type="Tween" parent="ArticleControl"]

[node name="BG" type="ColorRect" parent="ArticleControl"]
modulate = Color( 1, 1, 1, 0.8 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="ArticleControl"]
margin_left = 30.0
margin_top = 30.0
margin_right = 70.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 5 )
text = "123"
percent_visible = 0.0

[node name="Description" type="RichTextLabel" parent="ArticleControl"]
margin_left = 30.0
margin_top = 90.0
margin_right = 1108.0
margin_bottom = 756.0
theme = ExtResource( 12 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_constants/table_vseparation = 8
custom_constants/table_hseparation = 32
custom_constants/line_separation = 9
custom_fonts/bold_font = ExtResource( 11 )
custom_fonts/normal_font = ExtResource( 8 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0

[connection signal="draw" from="." to="." method="_on_Control_draw"]
[connection signal="hide" from="." to="." method="_on_Extra_hide"]
[connection signal="mouse_entered" from="TitleContainer/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="mouse_exited" from="TitleContainer/BackButton" to="." method="_on_BackButton_mouse_exited"]
[connection signal="resized" from="TitleContainer/Title" to="." method="_on_Title_resized"]
[connection signal="item_selected" from="MenuContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="meta_clicked" from="BothControl/TextContainer/Description" to="." method="_on_Description_meta_clicked"]
[connection signal="meta_clicked" from="ArticleControl/Description" to="." method="_on_Description_meta_clicked"]
